style: fixed a styling issue on mobile

--- a/Third Task/src/scss/pages/_gallery.scss
+++ b/Third Task/src/scss/pages/_gallery.scss
@@ -21,4 +21,8 @@
       font-size: 1.5rem;
     }
   }
+
+  .translate-middle {
+    width: max-content;
+  }
 }
